@@ -11,6 +11,7 @@ import com.faforever.moderatorclient.api.FafApiCommunicationService;
 import com.faforever.moderatorclient.api.domain.AvatarService;
 import com.faforever.moderatorclient.api.domain.PermissionService;
 import com.faforever.moderatorclient.api.domain.UserService;
+import com.faforever.moderatorclient.config.ApplicationPaths;
 import com.faforever.moderatorclient.config.local.LocalPreferences;
 import com.faforever.moderatorclient.mapstruct.GamePlayerStatsMapper;
 import com.faforever.moderatorclient.ui.*;
@@ -65,7 +66,6 @@ import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.*;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
@@ -80,8 +80,6 @@ import javafx.scene.control.Alert;
 import javafx.scene.control.Alert.AlertType;
 import javafx.scene.control.ButtonType;
 import org.springframework.web.client.HttpClientErrorException;
-
-import static com.faforever.moderatorclient.ui.MainController.CONFIGURATION_FOLDER;
 
 @Slf4j
 @Component
@@ -182,8 +180,8 @@ public class UserManagementController implements Controller<SplitPane> {
     @FXML
     public TextArea userNotesTextArea;
 
-    private static final String SEARCH_HISTORY_FILE = CONFIGURATION_FOLDER + File.separator +  "searchHistory.txt";
-    private static final String USER_NOTES_FILE = CONFIGURATION_FOLDER + File.separator + "userNotes.txt";
+    private static final String SEARCH_HISTORY_FILE_NAME = "searchHistory.txt";
+    private static final String USER_NOTES_FILE_NAME = "userNotes.txt";
     @FXML
     public TextField smurfVillageLookupTextField;
     public CheckBox includeUUIDCheckBox;
@@ -259,7 +257,8 @@ public class UserManagementController implements Controller<SplitPane> {
     @FXML
     private Button minimizeUserNotesButton;
 
-    private final File EXCLUDED_ITEMS_FILE = new File("data/excluded_items.json");
+    private final File EXCLUDED_ITEMS_FILE =
+            ApplicationPaths.resolveConfigurationDirectory().resolve("excluded_items.json").toFile();
 
     private final LocalPreferences localPreferences;
 
@@ -976,25 +975,26 @@ public class UserManagementController implements Controller<SplitPane> {
 
     public void saveOnExitContent() {
         try {
-            Files.write(Paths.get(SEARCH_HISTORY_FILE), searchHistoryTextArea.getText().getBytes());
-            Files.write(Paths.get(USER_NOTES_FILE), userNotesTextArea.getText().getBytes());
+            Files.createDirectories(ApplicationPaths.resolveConfigurationDirectory());
+            Files.writeString(ApplicationPaths.resolveConfigurationFile(SEARCH_HISTORY_FILE_NAME), searchHistoryTextArea.getText());
+            Files.writeString(ApplicationPaths.resolveConfigurationFile(USER_NOTES_FILE_NAME), userNotesTextArea.getText());
         } catch (IOException e) {
-            log.debug(String.valueOf(e));
+            log.warn("Failed to save search history/user notes", e);
         }
     }
 
     private void loadContent() {
         try {
-            if (Files.exists(Paths.get(SEARCH_HISTORY_FILE))) {
-                String searchHistory = new String(Files.readAllBytes(Paths.get(SEARCH_HISTORY_FILE)));
+            if (Files.exists(ApplicationPaths.resolveConfigurationFile(SEARCH_HISTORY_FILE_NAME))) {
+                String searchHistory = Files.readString(ApplicationPaths.resolveConfigurationFile(SEARCH_HISTORY_FILE_NAME));
                 searchHistoryTextArea.setText(searchHistory);
             }
-            if (Files.exists(Paths.get(USER_NOTES_FILE))) {
-                String userNotes = new String(Files.readAllBytes(Paths.get(USER_NOTES_FILE)));
+            if (Files.exists(ApplicationPaths.resolveConfigurationFile(USER_NOTES_FILE_NAME))) {
+                String userNotes = Files.readString(ApplicationPaths.resolveConfigurationFile(USER_NOTES_FILE_NAME));
                 userNotesTextArea.setText(userNotes);
             }
         } catch (IOException e) {
-            log.debug(String.valueOf(e));
+            log.warn("Failed to load search history/user notes", e);
         }
     }
 
